Fixed the spacing issues in header, carousel, single pardah line and italicised alternate name in word details

--- a/web/app/user/sass/components/_detailsLayout.scss
+++ b/web/app/user/sass/components/_detailsLayout.scss
@@ -163,6 +163,10 @@
             text-align: center;
             display: block;
 
+            .italicise {
+                font-style: italic;
+            }
+
             dt {
               color: $color-sub-link;
               text-transform: capitalize;
